# LeoGeoApp

./: .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  conanfile.txt
.github/workflows/: c-cpp.yml
cmake/: ClangTidy.cmake  Config.cmake  Doxygen.cmake  Sources.cmake
images/: AppIcon.icns
project/include/LeoGeo/: coordFrame.hpp  main.hpp  mainWindow.hpp  main_window.hpp  ui.hpp  usb_comm.hpp
project/src/: coordFrame.cpp  main.cpp  mainWindow.cpp  main_window.cpp  ui.cpp  usb_comm.cpp
